Removed explicit start date for now. Added start date to WPWG

--- a/group-charter.html
+++ b/group-charter.html
@@ -70,6 +70,7 @@
       -->
       <table class="summary-table">
         <tbody>
+          <tr id="Start"><th rowspan="1" colspan="1">Start date</th><td rowspan="1" colspan="1">@@</td></tr>
           <tr id="Duration">
             <th>End date</th>
             <td>30 September 2016</td>
