--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -36,7 +36,7 @@
     </div>
 
     <table class="summary-table">
-      <tr id="Start"><th rowspan="1" colspan="1">Start date</th><td rowspan="1" colspan="1">1 October 2015</td></tr>
+      <tr id="Start"><th rowspan="1" colspan="1">Start date</th><td rowspan="1" colspan="1">@@</td></tr>
       <tr id="Duration"><th rowspan="1" colspan="1">End date</th><td rowspan="1" colspan="1">30 September 2017</td></tr>
       <tr><th rowspan="1" colspan="1">Confidentiality</th><td rowspan="1" colspan="1">Proceedings are <a href="http://www.w3.org/2014/Process-20140801/#confidentiality-levels" shape="rect">public</a></td></tr>
       <tr><th rowspan="1" colspan="1">Initial Chairs</th><td rowspan="1" colspan="1"><span class="toadd">CHAIR INFO</span></td></tr>
