Change Streams API to use GH
The Streams API now uses Github (not Mercurial).

--- a/group-charter.html
+++ b/group-charter.html
@@ -255,7 +255,7 @@
               <dd>The Group MAY also define the mechanisms to fetch resources using the HTTP protocol and its extensions.</dd>
               </dl>
               </dd>
-              <dt id="streams-api"><a href="https://dvcs.w3.org/hg/streams-api/raw-file/tip/Overview.htm">Streams API</a></dt>
+              <dt id="streams-api"><a href="https://w3c.github.io/streams-api/">Streams API</a></dt>
               <dd>An API for representing a stream of data in web applications.</dd>
             </dl>
           </dd>
