--- a/group-charter.html
+++ b/group-charter.html
@@ -339,20 +339,21 @@
         <ul>
           <li id="cors">
 	     <a href="http://www.w3.org/TR/cors/">CORS</a></li>
-          <li id="dom-errata">Errata for DOM specifications, as required.</li>
+          <li id="dom">DOM specifications</li>
+          <li id="html50"><a href="http://www.w3.org/TR/html5/">HTML 5.0</a></li>
+          <li><a href="http://www.w3.org/TR/html-longdesc/">HTML5 Image Description Extension</a></li>
           <li id="widgets">
+          <li id="idb"><a href="http://www.w3.org/TR/IndexedDB/">Indexed Database API</a></li>
              <a href="http://www.w3.org/TR/widgets/">Packaged Web Apps (Widgets) - Packaging and XML Configuration</a></li>
           <li id="progress">
 	     <a href="http://www.w3.org/TR/progress-events/">Progress Events</a></li>
+	  <li id='sse'><a href="http://www.w3.org/TR/eventsource/">Server-sent Events</a></li>
           <li id="view-mode">
              <a href="http://www.w3.org/TR/view-mode/">view-mode Media Feature</a></li>
           <li id="webstorage">
              <a href="http://www.w3.org/TR/webstorage/">Web Storage</a></li>
           <li id='webmessaging'><a href="http://www.w3.org/TR/webmessaging/">Web
               Messaging</a></li>
-               <li id='sse'><a href="http://dev.w3.org/html5/eventsource/">Server-sent Events</a></li>
-          <li id="html50"><a href="http://www.w3.org/TR/html5/">HTML 5.0</a></li>
-               <li><a href="http://www.w3.org/TR/html-longdesc/">HTML5 Image Description Extension</a></li>
           <li id="widgets-apis">
 	     <a href="http://www.w3.org/TR/widgets-apis/">Widget Interface</a></li>
           <li id="widgets-access">
