Include IDB 2nd Ed and Web Storage 2nd Ed
This PR adds 2nd Edition versions of Indexed Database API and Web Storage as explicit deliverables.

--- a/group-charter.html
+++ b/group-charter.html
@@ -158,6 +158,8 @@
               API page</a>. The following Database APIs are deliverables under
             this charter:
             <dl>
+              <dt><a href="http://w3c.github.io/IndexedDB/">Indexed Database API (2nd Edition)</a></dt>
+              <dd>An API for a database of records holding simple values and hierarchical objects</dd>
               <dt><a href="https://w3c.github.io/quota-api/">Quota Management API</a></dt>
               <dd>An API for managing the amount of storage space (short- or
                 long-term) available.</dd>
@@ -167,6 +169,8 @@
 		for an application -- even when the network isn't available.</dd>
               <dt><a href="https://slightlyoff.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
               <dd>A specification describing a method that enables web applications to synchronize data when next online.</dd>
+              <dt><a href="http://w3c.github.io/webstorage/">Web Storage (2nd Edition></a></dt>
+              <dd>An API for persistent data storage of key-value pair data in Web clients.</dd>
             </dl>
           </dd>
           <dt id="dom">Document Object Model (DOM)</dt>
