IME API is a MAY

--- a/group-charter.html
+++ b/group-charter.html
@@ -169,7 +169,7 @@
 		for an application -- even when the network isn't available.</dd>
               <dt><a href="https://slightlyoff.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
               <dd>A specification describing a method that enables web applications to synchronize data when next online.</dd>
-              <dt><a href="http://w3c.github.io/webstorage/">Web Storage (2nd Edition></a></dt>
+              <dt><a href="http://w3c.github.io/webstorage/">Web Storage (2nd Edition)</a></dt>
               <dd>An API for persistent data storage of key-value pair data in Web clients.</dd>
             </dl>
           </dd>
@@ -236,7 +236,7 @@
           </dd>
           <dt><a href="https://w3c.github.io/ime-api/">Input
               Method (IME) API</a></dt>
-          <dd>This specification defines APIs that provide access to a (native) input method editor appication.</dd>
+          <dd>The Group MAY define an API that provide access to a (native) input method editor appication.</dd>
           <dt id="manifest"><a href="http://w3c.github.io/manifest/">Manifest for Web applications</a></dt>
           <dd>A JSON-based manifest, which provides developers with a
 	    centralized place to put metadata about a web application.</dd>
