--- a/group-charter.html
+++ b/group-charter.html
@@ -128,11 +128,11 @@
     <ul>
       <li>Production of stable documents addressing the work items
       listed in the <a href="#milestones">Milestones</a> section.
-      <li>A test suite for each deliverable with conformance criteria.
+      <li>A test suite for each deliverable with conformance criteria that provides evidence to support the position that there is good (though perhaps not perfect) interoperability.
       <li>Availability of authoring tools and validation tools.
       <li>User-community and industry adoption of the group deliverables.
       <li>Availability of multiple, independent, interoperable browser
-        implementations of each deliverable.
+        implementations of each deliverable. Remaining differences in implementations should have little impact on usage on the Web.
       <li>Specifications include normative conformance
         requirements for browser implementations.
       <li>Implementation reports that summarize the implementation status against
