--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -61,7 +61,12 @@
 
 	  <h3>Success Criteria</h3>
 
-    <p>In order to advance beyond Candidate Recommendation, each specification is expected to have at least two independent implementations of each of feature defined in the specification.</p>
+    <p>In order to advance beyond Candidate Recommendation, each specification is expected to have at least:</p>
+    <ul>
+     <li>two independent implementations of each of feature defined in the specification;</li>
+     <li>A test suite that provides evidence to support the position that there is good (though perhaps not perfect) interoperability;</li>
+     <li>Remaining differences in implementations have little impact on usage on the Web</li>
+    </ul>
 
 	 <h3>Out of Scope</h3>
 
