Minor editorial suggestions.

--- a/group-charter.html
+++ b/group-charter.html
@@ -567,7 +567,7 @@ during their development.
           developed with regular teleconferences. Note the <a href="#decisions">Decision
             Policy</a> below with regards to meetings. </p>
         <p>
-        The Working Group <strong>conduct their work primarily through github repositories</strong>,
+        The Working Group <strong>conducts its work primarily through github repositories</strong>,
         for contributions and communications. Discourse may be used for broad discussions with the community.
         There will be one github repository per document. Similar to open-source software development,
         peer production is encouraged: changes will be executed through Pull Requests, with pull requests reviewed before being merged.
@@ -576,7 +576,7 @@ during their development.
           to these lists is open to the public, subject to W3C norms of
           behavior. </p>
         <p>Up-to-date information about the group (for example, details about
-          deliverables, issues, actions, status, participants) is available from
+          deliverables, issues, actions, status, and participants) is available from
           the <a href="http://www.w3.org/2015/@@@@/">Web
             Platform Working Group home page.</a></p>
       </div>
