Removed one-repo constraint

--- a/group-charter.html
+++ b/group-charter.html
@@ -495,7 +495,7 @@ during their development.
             accessibility requirements. (This Group is expected to combine into an all-guidelines group in 2016 2Q).</dd>
           <dt><a href="http://www.w3.org/annotation/">Web Annotation Working Group</a></dt>
           <dd>The Web Platform Working Group has a joint deliverable with this group regarding
-            robust anchoring.</dd>	
+            robust anchoring.</dd>
           <dt><a href="http://www.w3.org/Mobile/IG/">Web and Mobile Interest Group</a></dt>
           <dd>This group may provide advice or review to ensure that Web Platform WG
             deliverables interact correctly in the context of Mobile applications.</dd>
@@ -572,7 +572,7 @@ during their development.
         <p>
         The Working Group <strong>conducts its work primarily through github repositories</strong>,
         for contributions and communications. Discourse may be used for broad discussions with the community.
-        There will be one github repository per document. Similar to open-source software development,
+        Similar to open-source software development,
         peer production is encouraged: changes will be executed through Pull Requests, with pull requests reviewed before being merged.
         The Chairs must ensure that regular activity summaries around the github repositories activity are provided.</p>
         <p>The Group may use mailing lists. Subscription
