--- a/group-charter.html
+++ b/group-charter.html
@@ -53,7 +53,7 @@
             alt="Interaction Domain"
             src="http://www.w3.org/Icons/interaction" /></a>
       </p>
-      <h1 id="title">[DRAFT] Web Platform Working Group Charter</h1>
+      <h1 id="title">[PROPOSED] Web Platform Working Group Charter</h1>
 
       <p class="mission">The mission of the <a href="@@">Web
           Platform Working Group</a> is to continue the development of the <abbr title="HyperText Markup Language">HTML</abbr> language, providing specifications that enable
