--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -21,7 +21,7 @@
 
   <p><a href="http://www.w3.org/" shape="rect"><img alt="W3C" height="48" src="https://www.w3.org/Icons/w3c_home" width="72"/></a>  <a class="domainlogo" href="/Interaction/" shape="rect"><img src="http://www.w3.org/Icons/interaction" alt="Interaction Domain"/></a></p>
 
-    <h1 id="title">[DRAFT] Timed Media Working Group Charter</h1>
+    <h1 id="title">[PROPOSED] Timed Media Working Group Charter</h1>
 
     <p class="mission">The
     <strong>mission</strong> of the Timed Media Working Group is to
