--- a/group-charter.html
+++ b/group-charter.html
@@ -574,7 +574,7 @@ during their development.
             Policy</a> below with regards to meetings. </p>
         <p>
         The Working Group <strong>conducts its work primarily through github repositories</strong>,
-        for contributions and communications. Discourse may be used for broad discussions with the community.
+        for contributions and communications.
         Similar to open-source software development,
         peer production is encouraged: changes will be executed through Pull Requests, with pull requests reviewed before being merged.
         The Chairs must ensure that regular activity summaries around the github repositories activity are provided.</p>
