--- a/group-charter.html
+++ b/group-charter.html
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <th>Confidentiality</th>
-            <td>Proceedings are <a href="http://www.w3.org/2014/Process-20140801/#confidentiality-levels">Public</a></td>
+            <td>Proceedings are <a href="http://www.w3.org/Consortium/Process/#confidentiality-levels">Public</a></td>
           </tr>
           <tr>
             <th>Chairs</th>
@@ -629,7 +629,7 @@ during their development.
       <div class="patent">
         <h2 id="about">About this Charter</h2>
         <p>This charter for the Web Platform Working Group has been created
-          according to <a href="http://www.w3.org/2014/Process-20140801/#GroupsWG">section
+          according to <a href="http://www.w3.org/Consortium/Process/groups#GAGeneral">section
             6.2</a> of the <a href="http://www.w3.org/Consortium/Process">Process
             Document</a>. In the event of a conflict between this document or
           the provisions of any charter and the W3C Process, the W3C Process
