--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -37,7 +37,7 @@
     <table class="summary-table">
       <tr id="Start"><th rowspan="1" colspan="1">Start date</th><td rowspan="1" colspan="1">@@</td></tr>
       <tr id="Duration"><th rowspan="1" colspan="1">End date</th><td rowspan="1" colspan="1">30 September 2017</td></tr>
-      <tr><th rowspan="1" colspan="1">Confidentiality</th><td rowspan="1" colspan="1">Proceedings are <a href="http://www.w3.org/2014/Process-20140801/#confidentiality-levels" shape="rect">public</a></td></tr>
+      <tr><th rowspan="1" colspan="1">Confidentiality</th><td rowspan="1" colspan="1">Proceedings are <a href="http://www.w3.org/Consortium/Process/#confidentiality-levels" shape="rect">public</a></td></tr>
       <tr><th rowspan="1" colspan="1">Initial Chairs</th><td rowspan="1" colspan="1"><span class="toadd">CHAIR INFO</span></td></tr>
       <tr><th rowspan="1" colspan="1">Initial Team Contacts<br/>
         (FTE %: 70)</th><td rowspan="1" colspan="1">Yosuke Funahashi, <span class="toadd">TBD</span></td></tr>
@@ -122,7 +122,7 @@
           <tr>
             <th rowspan="1" colspan="1">Specification</th>
             <th rowspan="1" colspan="1"><acronym title="First Working Draft">FPWD</acronym></th>
-            <th rowspan="1" colspan="1"><acronym title="Last Call Working Draft (2014 Process)">LC</acronym> / <acronym title="Candidate Recommendation">CR</acronym></th>
+            <th rowspan="1" colspan="1"><acronym title="Candidate Recommendation">LC</acronym> / <acronym title="Candidate Recommendation">CR</acronym></th>
             <th rowspan="1" colspan="1"><acronym title="Proposed Recommendation">PR</acronym></th>
             <th rowspan="1" colspan="1"><acronym title="Recommendation">Rec</acronym></th>
           </tr>
