Require CfC for group decisions

--- a/group-charter.html
+++ b/group-charter.html
@@ -605,7 +605,7 @@ during their development.
           available.</p>
         <p><strong>Any resolution taken in a face-to-face meeting or teleconference is
           to be considered provisional until 10 working days after the
-          publication of the resolution in draft minutes sent to the working
+          publication of the resolutions in a Call for Consensus sent to the working
           group's mailing list. If no objections are raised on the mailing list
           within that time, the resolution will be considered to have consensus
           as a resolution of the Working Group.</strong></p>
