--- a/group-charter.html
+++ b/group-charter.html
@@ -503,6 +503,8 @@ during their development.
           <dt><a href="http://www.w3.org/Mobile/IG/">Web and Mobile Interest Group</a></dt>
           <dd>This group may provide advice or review to ensure that Web Platform WG
             deliverables interact correctly in the context of Mobile applications.</dd>
+          <dt><a href="http://www.w3.org/2011/webtv/">Web and TV Interest Group</a></dt>
+          <dd>This Group is to provide a forum for Web and TV technical discussions, to review existing work, as well as the relationship between services on the Web and TV services, and to identify requirements and potential solutions to ensure that the Web will function well with TV. </dd>
           <dt><a href="http://www.w3.org/2011/webappsec/">Web Applications
               Security Working Group</a></dt>
           <dd>As well as having a joint deliverable (CORS), this group has many
