--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -100,7 +100,7 @@
         <dt>Transcript</dt>
         <dd>If the current <a href="http://w3c.github.io/html-transcript/html-transcript-src.html">Transcript proposal</a> gains implementation support and momentum, this Group will adopt the proposal.</dd>
         <dt>Captioning support</dt>
-        <dd>The group may produce a specification to enhance the timed text and caption support available to HTML5 media elements. At a future date, should the <a href=' http://www.w3.org/AudioVideo/TT/'>Timed Text Working Group</a> choose to halt work on the <a href='http://www.w3.org/TR/webvtt1/'>WebVTT</a> specification, the Timed Media Working Group may take up this work.</dd>
+        <dd>The group may produce a specification to enhance the timed text and caption API support available to HTML5 media elements.</dd>
         <dt>Inband Track Support</dt>
         <dd>If the <a href='https://www.w3.org/community/inbandtracks/'>Media Resource In-band</a> Tracks Community Group produces a <a href='http://dev.w3.org/html5/html-sourcing-inband-tracks/'>mature specification</a> with implementation support then the Timed Media Working Group may adopt this work onto the Recommendation Track.</dd>
         <dt>Media Capture</dt>
