--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -195,8 +195,8 @@
     <div class="communication">
       <h2 id="communication">Communication</h2>
         <p>
-        The Working Group <strong>conducts its work primarily through github repositories</strong>, for contributions and communications. There will be one github repository per document. Similar to open-source software development, peer production is encouraged: changes will be executed through Pull Requests, where each pull request gets preferably reviewed before being merged.
-        Regular activity summaries around the github repositories MUST be provided.</p>
+        The Working Group <strong>conducts its work primarily through GitHub repositories</strong>, for contributions and communications. There will be one GitHub repository per document. Similar to open-source software development, peer production is encouraged: changes will be executed through Pull Requests, where each pull request gets preferably reviewed before being merged.
+        Regular activity summaries around the GitHub repositories MUST be provided.</p>
         <p>The Group may also use a mailing list. Subscription
           to these lists is open to the public, subject to W3C norms of
           behavior. </p>
