security protocols are out of scope

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -67,9 +67,9 @@
      <li>Remaining differences in implementations have little impact on usage on the Web</li>
     </ul>
 
-	 <h3>Out of Scope</h3>
+  <h3>Out of Scope</h3>
 
-   <p>The group will not work on developing codecs, new media formats, or new encryption algorithms.</p>
+   <p>The group will not work on developing codecs, new media formats, security protocols, or new encryption algorithms.</p>
    <p>The group will not work on audio processing APIs or real-time communication but will liaise with the Audio Working Group and the Web Real-Time Communications Working Group to ensure lower level capabilities
     created by the Timed Media Working Group are compatible with those groups' goals.</p>
   </div>
