--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -153,7 +153,7 @@
  	<h3>W3C Groups</h3>
 
  	  <dl>
-      <dt><a href="http://w3c.github.io/charter-html/group-charter.html">Web Platform Working Group</a></dt>
+      <dt><a href="https://w3c.github.io/charter-html/group-charter.html">Web Platform Working Group</a></dt>
       <dd>This group continues the development of the HTML language, provides specifications that enable improved client-side application development on the Web, including application programming interfaces (APIs) for client-side development and markup vocabularies for describing and controlling client-side application behavior.</dd>
       <dt><a href="http://www.w3.org/2011/audio/">Audio Working Group</a></dt>
       <dd>This group creates API specifications for audio processing and is interested in low level audio device APIs.</dd>
@@ -241,7 +241,7 @@
 
     <p>This charter for the Timed Media Working Group has been created according to
     <a href="/Consortium/Process/groups#GAGeneral" shape="rect">section
-    6.2</a> of the <a href="/Consortium/Process" shape="rect">Process
+    5</a> of the <a href="/Consortium/Process" shape="rect">Process
     Document</a>.   In the event of a
     conflict between this document or the provisions of any charter
     and the W3C Process, the W3C Process shall take precedence.</p>
