Added RF and licensing statement in success criteria

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -66,6 +66,9 @@
      <li>A test suite that provides evidence to support the position that there is good (though perhaps not perfect) interoperability;</li>
      <li>Remaining differences in implementations have little impact on usage on the Web</li>
     </ul>
+    <p>
+      The Timed Media Working Group should prefer referencing media technologies that can be implemented and used under royalty-free terms or without licensing contracts.
+    </p>
 
   <h3>Out of Scope</h3>
 
