Added capture and acquisition in scope

--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -56,7 +56,7 @@
     <div class="scope">
       <h2 id="scope">Scope</h2>
 
-      <p>The scope of the Timed Media Working Group covers technologies related to the orchestration and playback of timed media such as video and audio. The Timed Media Working Group deliverables must address issues of <strong>accessibility, device independence, interoperability, mobility, privacy, and security</strong>. The Working Group should address the <a href="http://www.w3.org/TR/media-accessibility-reqs/">Media Accessibility User Requirements</a>, and features that aid accessibility such as captions and transcripts are in scope. Functionality to coordinate other interactions with timed events in the media files is in scope.</p>
+      <p>The scope of the Timed Media Working Group covers technologies related to the capture, acquisition, orchestration and playback of timed media such as video and audio. The Timed Media Working Group deliverables must address issues of <strong>accessibility, device independence, interoperability, mobility, privacy, and security</strong>. The Working Group should address the <a href="http://www.w3.org/TR/media-accessibility-reqs/">Media Accessibility User Requirements</a>, and features that aid accessibility such as captions and transcripts are in scope. Functionality to coordinate other interactions with timed events in the media files is in scope.</p>
 
 	  <h3>Success Criteria</h3>
 
