--- a/timed-media-wg.html
+++ b/timed-media-wg.html
@@ -210,7 +210,7 @@
       is consensus.
       The expectation is that typically, an editor or other participant makes an initial proposal, which is then refined in discussion with members of the group and other reviewers, and consensus emerges with little formal voting being required. However, if a decision is necessary for timely progress, but consensus is not achieved after careful consideration of the range of views presented, the Chairs should put a question out for voting within the group (allowing for remote asynchronous participation -- using, for example, email and/or web-based survey techniques) and record a decision, along with any objections. The matter should then be considered resolved unless and until new information becomes available.</p>
 
-      <p>Any resolution taken in a face-to-face meeting or teleconference is to be considered provisional until 10 working days after the publication of the resolution in draft minutes sent to the working group's mailing list. If no objections are raised on the mailing list within that time, the resolution will be considered to have consensus as a resolution of the Working Group.</p>
+      <p>Any resolution taken in a face-to-face meeting or teleconference is to be considered provisional until 10 working days after the publication of the resolution in Call for Consensus sent to the working group's mailing list. If no objections are raised on the mailing list within that time, the resolution will be considered to have consensus as a resolution of the Working Group.</p>
 
       <p>This charter is written in accordance with <a href="http://www.w3.org/Consortium/Process/policies#Votes" shape="rect">Section
         3.4, Votes</a> of the W3C Process Document and includes no
