--- a/group-charter.html
+++ b/group-charter.html
@@ -121,7 +121,7 @@
         </ul>
 
         <p>
-           The Web Platform Working Group should rely on modularity as a key part of the development of the HTML language, allowing extension specifications to define new elements, new attributes, new values for attributes that accept defined sets of keywords, and new APIs.
+           The Web Platform Working Group should develop modular specifications to the greatest extent possible for the development of the HTML language, allowing extension specifications to define new elements, new attributes, new values for attributes that accept defined sets of keywords, and new APIs.
         </p>
       <div>
         <h3 id="success">Success Criteria</h3>
