Removed the explicit mention of #webapps to make it generic

--- a/group-charter.html
+++ b/group-charter.html
@@ -96,7 +96,7 @@
               group, and/or additional meetings of subgroups working on specific
               topics.)<br />
               IRC: active participants, particularly editors, regularly use the
-              #webapps IRC channel</td>
+              group's IRC channel(s)</td>
           </tr>
         </tbody>
       </table>
