--- a/group-charter.html
+++ b/group-charter.html
@@ -601,16 +601,18 @@ during their development.
           and consensus emerges with little formal voting being required.
           However, if a decision is necessary for timely progress, but consensus
           is not achieved after careful consideration of the range of views
-          presented, the Chairs should put a question out for voting within the
-          group (allowing for remote asynchronous participation -- using, for
-          example, email and/or web-based survey techniques) and record a
+          presented, the Chairs may put a question out for voting within the
+          group  to allow for asynchronous participation, using the mechanism 
+          noted in the group's <a href="http://www.w3.org/2008/webapps/wiki/WorkMode">Work Mode</a>
+          documents, and record a
           decision, along with any objections. The matter should then be
           considered resolved unless and until new information becomes
           available.</p>
         <p><strong>Any resolution taken in a face-to-face meeting or teleconference is
           to be considered provisional until 10 working days after the
-          publication of the resolutions in a Call for Consensus sent to the working
-          group's mailing list. If no objections are raised on the mailing list
+          publication of the resolutions in meeting minutes sent to the appropriate working
+          group mailing list as described in the <a href="http://www.w3.org/2008/webapps/wiki/WorkMode">Work Mode</a>
+          documents. If no objections are raised on the mailing list
           within that time, the resolution will be considered to have consensus
           as a resolution of the Working Group.</strong></p>
         <p>This charter is written in accordance with <a href="http://www.w3.org/Consortium/Process/policies#Votes">Section
