Renamed Robust Anchoring API to FindText API

--- a/group-charter.html
+++ b/group-charter.html
@@ -311,7 +311,7 @@
           <dd>A local sandboxed file system API exposed only to Web Applications.</dd>
           <dt id="packaging"><a href="http://w3ctag.github.io/packaging-on-the-web/">Packaging on the Web</a></dt>
           <dd>Defines an approach for creating packages of files for use on the web.</dd>
-          <dt id="robust-anchoring">Robust Anchoring API</dt>
+          <dt id="robust-anchoring"><a href='http://w3c.github.io/findtext/'>FindText API</a></dt>
           <dd>APIs for linking to a document selection, even when the document
             has changed. This is a joint deliverable with the Web
             Annotation WG.</dd>
