--- a/group-charter.html
+++ b/group-charter.html
@@ -400,11 +400,10 @@
 	  <a href="https://w3c.github.com/webplatform-wg/PubStatus.md">Specification Status</a>
 	  document for accurate data.</p>
 	<ul>
-    <li>Web Storage (2nd edition): Recommendation expected in 2015</li>
-    <li>Web Workers: Recommendation expected in 2015</li>
-    <li>Web Sockets: Recommendation expected in 2015</li>
-	  <li>XHR: Recommendation expected in early 2016</li>
-	  <li>DOM Parsing and Serialization: Recommendation expected in early 2016</li>
+    <li>Web Storage (2nd edition): Recommendation expected in 2016</li>
+    <li>Web Workers: Recommendation expected in 2016</li>
+    <li>Web Sockets: Recommendation expected in 2016</li>
+	  <li>DOM Parsing and Serialization: Recommendation expected in 2016</li>
 	  <li>Web IDL: Recommendation expected in early 2016</li>
 	</ul>
       </div>
