--- a/group-charter.html
+++ b/group-charter.html
@@ -85,7 +85,7 @@
           <tr>
             <th>Team Contacts <br />
               (FTE %: 1.55)</th>
-            <td>Yves Lafon, Xiaoqian Wu, Yosuke Funahashi</td>
+            <td>Yves Lafon, Xiaoqian Wu, TBD</td>
           </tr>
           <tr>
             <th>Usual Meeting Schedule</th>
