installing Web Platform assets

--- a/group-charter.html
+++ b/group-charter.html
@@ -55,7 +55,7 @@
       </p>
       <h1 id="title">[PROPOSED] Web Platform Working Group Charter</h1>
 
-      <p class="mission">The mission of the <a href="@@">Web
+      <p class="mission">The mission of the <a href="http://www.w3.org/WebPlatform/WG/">Web
           Platform Working Group</a> is to continue the development of the <abbr title="HyperText Markup Language">HTML</abbr> language, providing specifications that enable
         improved client-side application development on the Web, including
          application programming interfaces (APIs)
@@ -570,14 +570,14 @@ during their development.
       </div>
       <div class="communication">
         <h2 id="communication">Communication</h2>
-        <p>The <a href="https://w3c.github.com/webplatform-wg/@@">working
+        <p>The <a href="http://www.w3.org/WebPlatform/WG/">working
             mode</a> of the group is described in detail on its wiki. In general
           the group does not hold plenary teleconferences, but does meet face to face at the
           TPAC. It may hold more meetings, and certain specifications are
           developed with regular teleconferences. Note the <a href="#decisions">Decision
             Policy</a> below with regards to meetings. </p>
         <p>
-        The Working Group <strong>conducts its work primarily through GitHub repositories</strong>,
+        The Working Group <strong>conducts its work primarily through <a href='https://github.com/orgs/w3c/teams/WebPlatformWG/repositories'>GitHub repositories</a></strong>,
         for contributions and communications.
         Similar to open-source software development,
         peer production is encouraged: changes will be executed through Pull Requests, with pull requests reviewed before being merged.
@@ -587,7 +587,7 @@ during their development.
           behavior. </p>
         <p>Up-to-date information about the group (for example, details about
           deliverables, issues, actions, status, and participants) is available from
-          the <a href="http://www.w3.org/2015/@@@@/">Web
+          the <a href="http://www.w3.org/WebPlatform/WG/">Web
             Platform Working Group home page</a>.</p>
       </div>
       <div class="decisions">
@@ -601,8 +601,8 @@ during their development.
           However, if a decision is necessary for timely progress, but consensus
           is not achieved after careful consideration of the range of views
           presented, the Chairs may put a question out for voting within the
-          group  to allow for asynchronous participation, using the mechanism 
-          noted in the group's <a href="http://www.w3.org/2008/webapps/wiki/WorkMode">Work Mode</a>
+          group  to allow for asynchronous participation, using the mechanism
+          noted in the group's <a href="https://github.com/w3c/WebPlatformWG/blob/gh-pages/WorkMode.md">Work Mode</a>
           documents, and record a
           decision, along with any objections. The matter should then be
           considered resolved unless and until new information becomes
@@ -610,7 +610,7 @@ during their development.
         <p><strong>Any resolution taken in a face-to-face meeting or teleconference is
           to be considered provisional until 10 working days after the
           publication of the resolutions in meeting minutes sent to the appropriate working
-          group mailing list as described in the <a href="http://www.w3.org/2008/webapps/wiki/WorkMode">Work Mode</a>
+          group mailing list as described in the <a href="https://github.com/w3c/WebPlatformWG/blob/gh-pages/WorkMode.md">Work Mode</a>
           documents. If no objections are raised on the mailing list
           within that time, the resolution will be considered to have consensus
           as a resolution of the Working Group.</strong></p>
