--- a/web-platform-charter.html
+++ b/web-platform-charter.html
@@ -101,7 +101,7 @@
             </td>
           </tr>
 
-          <tr class="todo">
+          <tr>
             <th>Charter extension</th>
             <td>See <a href="#history">Change History</a>.
             </td>
@@ -395,11 +395,11 @@
               </tr>
               <tr>
                 <th>
-                  <a href="">Rechartered</a>
+                  <a href="http://w3c.github.io/charter-html/web-platform-charter.html">Proposed</a>
                 </th>
                 <td>
                   1 October 2016
-                </td
+                </td>
                 <td>
                   30 September 2017
                 </td>
@@ -417,7 +417,7 @@
 
     <footer>
       <address>
-        See <a href='https://github.com/w3c/charter-html/commits/gh-pages'>Github commits</a>
+        See <a href='https://github.com/w3c/charter-html/commits/gh-pages/web-platform-charter.html'>Github commits</a>
       </address>
 
 
