--- a/group-charter.html
+++ b/group-charter.html
@@ -251,6 +251,7 @@
                     including when the network isn't available.</dd>
                 <dt id="web-sockets"><a title="Web Sockets API" href="https://github.com/w3c/websockets/">Web Sockets API</a></dt>
                   <dd>An API to use the Web Sockets protocol for two-way communication with a remote host.</dd>
+              </dl>
 
           <dt id="pointer-lock"><a href="https://w3c.github.io/pointerlock/">Pointer Lock</a></dt>
             <dd>Defines APIs that provide scripted access to raw mouse movement data
@@ -281,10 +282,11 @@
             mechanism.</dd>
         </dl>
 
-        <p>The following deliverables may be developed if they have had sufficient incubation to expect success:</p>
+        <h4>Potential deliverables</h4>
+        <p>The following deliverables may be developed as Recommendation track documents, if they have had sufficient incubation to expect success:</p>
         <dl>
           <dt><a href="https://w3c.github.io/ime-api/">Input Method (IME) API</a></dt>
-           <dd>The Group MAY define an API that provides access to a (native) input method editor.</dd>
+           <dd>An API that provides access to a (native) input method editor.</dd>
           <dt id="file-system-2"><a href="http://w3c.github.io/filesystem-api/">FileSystem API</a></dt>
            <dd>A local sandboxed file system API exposed only to Web Applications.</dd>
           <dt id="packaging"><a href="http://w3ctag.github.io/packaging-on-the-web/">Packaging on the Web</a></dt>
