--- a/group-charter.html
+++ b/group-charter.html
@@ -89,8 +89,8 @@
           </tr>
           <tr>
             <th>Team Contacts <br />
-              (FTE %: @@)</th>
-            <td>Yves Lafon, Xiaoqian Wu, Philippe Le Hégaret</td>
+              (FTE %: 100)</th>
+            <td>Yves Lafon, Xiaoqian Wu</td>
           </tr>
           <tr>
             <th>Usual Meeting Schedule</th>
