Added year of merging

--- a/group-charter.html
+++ b/group-charter.html
@@ -108,7 +108,7 @@
       <section id="background">
         <h2>Background</h2>
         <p>The Web Platform Working Group was the result of merging the Web Applications Working Group and the
-          HTML Working Group, with some deliverables moved to other groups. The work boundaries between the two
+          HTML Working Group in 2015, with some deliverables moved to other groups. The work boundaries between the two
           Working Groups had narrowed over the years, given that it is difficult to introduce new
           HTML elements and attributes without looking at their implications at the API level.</p>
         <p>The initial experiment in merging the group for 12 months suggests that it is a reasonable path to continue.
