Alex Russell moved his repos

--- a/group-charter.html
+++ b/group-charter.html
@@ -252,7 +252,7 @@
           <dt id='network'>Network</dt>
             <dd>Specifications that allow network communications:
               <dl>
-                <dt><a href="http://slightlyoff.github.io/ServiceWorker/spec/service_worker/">Service Workers</a></dt>
+                <dt><a href="http://w3c.github.io/ServiceWorker/spec/service_worker/">Service Workers</a></dt>
                   <dd>Persistently cache resources and handle all resource requests for an application via script,
                     including when the network isn't available.</dd>
                 <dt id="web-sockets"><a title="Web Sockets API" href="https://github.com/w3c/websockets/">Web Sockets API</a></dt>
@@ -306,7 +306,7 @@
             Annotation WG.</dd>
           <dt><a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a></dt>
            <dd>A way to include and reuse HTML documents in another HTML documents.</dd>
-          <dt><a href="https://slightlyoff.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
+          <dt><a href="https://wicg.github.io/BackgroundSync/spec/">Web Background Synchronization</a></dt>
            <dd>A specification describing a method that enables Web applications to synchronize data when next online.</dd>
         </dl>
 
