Fixed link to Publication and Status

--- a/group-charter.html
+++ b/group-charter.html
@@ -323,7 +323,7 @@
           then it will recharter with changes to that new charter limited to
           just the changes in deliverables.</p>
         <p>For current information on the list of deliverables and their status see the Web Platform WG
-          <a href="https://w3c.github.io/webplatform-wg/PubStatus.md">Publication Status</a> page.</p>
+          <a href="https://www.w3.org/WebPlatform/WG/PubStatus">Publication Status</a> page.</p>
 
         <h4 id="maintenance">2.1.1. Specification Maintenance</h4>
         <p>The working group will maintain errata and publish revisions, as necessary, for the following W3C Recommendations:</p>
