Link to WICG homepage instead

--- a/group-charter.html
+++ b/group-charter.html
@@ -317,7 +317,7 @@
           of the specification under this charter. Specifications may be moved to Recommendation and a subsequent version begun
           to facilitate the progress of other work which depends on a stable reference.</p>
         <p>The Working Group will not adopt new proposals until they have
-          matured through the <a href="https://wicg.github.io/admin/charter.html">Web Platform
+          matured through the <a href="https://wicg.io/">Web Platform
           Incubator Community Group</a> or another similar incubation phase. If
           the Working Group decides to add new Recommendation-track deliverables
           then it will recharter with changes to that new charter limited to
