Fixed link to Publication and Status

--- a/group-charter.html
+++ b/group-charter.html
@@ -359,7 +359,7 @@
             is encouraged. </p>
         </section>
         <h3 id="milestones">Milestones</h3>
-        <p>The group's <a href="https://w3c.github.io/webplatform-wg/PubStatus.md">Publication Status</a>
+        <p>The group's <a href="https://www.w3.org/WebPlatform/WG/PubStatus">Publication Status</a>
 	  document provides current data about all of the group's specifications.
 	  Although the group expects all of its active deliverables to progress during this
 	  charter period, the charter does not include detailed <em>milestone</em> data for each specification because
