Added security in general dependencies

--- a/group-charter.html
+++ b/group-charter.html
@@ -381,8 +381,8 @@
         <p>Many specifications in many Working Groups depend on WebIDL.</p>
         <p>Web Sockets depends on work in the
           <a href="http://www.ietf.org/dyn/wg/charter/hybi-charter.html">IETF's HyBi Working Group</a>. </p>
-	<p>This working group depends on review of aspects such as accessibility, internationalisation and privacy in its
-          deliverables</p>
+        <p>This working group depends on review of aspects such as accessibility,
+        internationalisation, security, and privacy in its deliverables.</p>
 
         <p>The Web Platform Working Group will keep contact with and where applicable request review from at least the following:</p>
         <dl>
